objects/vlocity_cmt__QuoteLineItemPricingAdjustment__c.object
<CustomObject>
    <description>DEPRECATED. Use Quote Pricing Adjustment.</description>
    <fields>
        <fullName>vlocity_cmt__AssetPricingAdjustmentReferenceId__c</fullName>
        <description>DEPRECATED.</description>
        <label>Asset Pricing Adjustment Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EstimatedEndDate__c</fullName>
        <description>DEPRECATED.</description>
        <label>Estimated End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EstimatedStartDate__c</fullName>
        <description>DEPRECATED.</description>
        <label>Estimated Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipName>QuoteLineItemPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>DEPRECATED.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <description>DEPRECATED.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>QuoteLineItemPricingAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item Pricing Adjustments</relationshipLabel>
        <relationshipName>QuoteLineItemPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>DEPRECATED.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Line Item Pricing Adjustment</label>
    <nameField>
        <label>Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Item Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>